--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="flex flex-col gap-6">
         
         <!-- First Row - 4 products -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
             <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_1_IMAGE_URL'); background-size: cover; background-position: center;">
               <span class="text-gray-400">PRODUCT 1</span>
@@ -154,7 +154,7 @@
         </div>
 
         <!-- Second Row - 3 products centered -->
-        <div class="grid grid-cols-2 md:grid-cols-3 gap-6 max-w-3xl mx-auto md:w-3/4">
+        <div class="grid grid-cols-2 md:grid-cols-3 gap-4 md:gap-6 md:max-w-3xl md:mx-auto md:w-3/4">
           <div class="flex flex-col gap-2">
             <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_5_IMAGE_URL'); background-size: cover; background-position: center;">
               <span class="text-gray-400">PRODUCT 5</span>
@@ -173,7 +173,7 @@
             </a>
           </div>
 
-          <div class="flex flex-col gap-2">
+          <div class="flex flex-col gap-2 col-span-2 md:col-span-1 max-w-[calc(50%-0.5rem)] md:max-w-none mx-auto">
             <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
               <span class="text-gray-400">PRODUCT 7</span>
             </a>
