--- a/index.html
+++ b/index.html
@@ -100,6 +100,29 @@
           <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
           <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
         </div>
+        <!-- Duplicate for seamless loop -->
+        <div class="flex gap-2">
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+        </div>
       </div>
     </div>
 
@@ -173,13 +196,15 @@
             </a>
           </div>
 
-          <div class="flex flex-col gap-2 col-span-2 md:col-span-1 max-w-[calc(50%-0.5rem)] md:max-w-none mx-auto">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 7</span>
-            </a>
-            <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 7
-            </a>
+          <div class="flex flex-col gap-2 col-span-2 md:col-span-1">
+            <div class="w-1/2 md:w-full mx-auto">
+              <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
+                <span class="text-gray-400">PRODUCT 7</span>
+              </a>
+              <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
+                Product Name 7
+              </a>
+            </div>
           </div>
         </div>
       </div>
