--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
             </a>
           </div>
 
-          <div class="flex flex-col gap-2 col-span-2 md:col-span-1">
-            <div class="w-1/2 md:w-full mx-auto">
+          <div class="flex flex-col gap-2">
               <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
                 <span class="text-gray-400">PRODUCT 7</span>
               </a>
