--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Logo Section -->
     <div class="py-32 flex justify-center items-center">
-      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url('YOUR_LOGO_IMAGE_URL'); background-size: cover; background-position: center;">
+      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
         <span class="text-gray-400">LOGO</span>
       </a>
     </div>
