--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
     <!-- Logo Section -->
     <div class="py-32 flex justify-center items-center">
-      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
-        <span class="text-gray-400">LOGO</span>
+      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://drive.google.com/file/d/1geN3NC8CThB7tiBgJNzwlPG6_7UzEdPE/view?usp=sharing); background-size: cover; background-position: center;">
+        <span class="text-gray-400"></span>
       </a>
     </div>
 
@@ -140,29 +140,29 @@
         <!-- First Row - 4 products -->
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_1_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 1</span>
+            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 1
+              buddytv2
             </a>
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_2_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 2</span>
+            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 2
+              puppy paws
             </a>
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_3_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 3</span>
+            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 3
+              script
             </a>
           </div>
 
