--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Logo Section -->
     <div class="py-32 flex justify-center items-center">
-      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://drive.google.com/file/d/1geN3NC8CThB7tiBgJNzwlPG6_7UzEdPE/view?usp=sharing); background-size: cover; background-position: center;">
+      <a href="#" class="w-64 h-64 border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://github.com/Sibalith/Images/blob/main/budddy%20head.png?raw=true); background-size: cover; background-position: center;">
         <span class="text-gray-400"></span>
       </a>
     </div>
@@ -140,7 +140,7 @@
         <!-- First Row - 4 products -->
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -149,7 +149,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -158,7 +158,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
