--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- First Row - 4 products -->
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/buddytv2shirts" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -149,7 +149,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/puppy-paws" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -158,11 +158,11 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/script-angel-tee" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              script
+              script angel
             </a>
           </div>
 
