--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Logo Section -->
     <div class="py-32 flex justify-center items-center">
-      <a href="https://audio.jukehost.co.uk/GszEuHP7S2h8bmLQQCHV3LF17Zb4Bq5b" onclick="playSound(); return false;" class="w-64 h-64 border-2 border-transparent flex items-center justify-center hover:border-gray-400 transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover; background-position: center;">
+      <a href="https://audio.jukehost.co.uk/GszEuHP7S2h8bmLQQCHV3LF17Zb4Bq5b" onclick="playSound(); return false;" class="w-64 h-64 border-2 border-transparent flex items-center justify-center hover:border-transparent transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover; background-position: center;">
         <span class="text-gray-400"></span>
       </a>
     </div>
