--- a/index.html
+++ b/index.html
@@ -204,6 +204,15 @@
                 Product Name 7
               </a>
             </div>
+          
+          <div class="flex flex-col gap-2">
+              <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
+                <span class="text-gray-400">PRODUCT 8</span>
+              </a>
+              <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
+                Product Name 8
+              </a>
+            </div>
           </div>
         </div>
       </div>
