--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         </div>
 
         <!-- Second Row - 3 products centered -->
-        <div class="grid grid-cols-2 md:grid-cols-3 gap-4 md:gap-6 md:max-w-3xl md:mx-auto md:w-3/4">
-          <div class="flex flex-col gap-2">
+       <div class="flex-1 py-24 px-8 max-w-7xl mx-auto w-full">
+      <div class="flex flex-col gap-6">
             <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_5_IMAGE_URL'); background-size: cover; background-position: center;">
               <span class="text-gray-400">PRODUCT 5</span>
             </a>
