--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
     </div>
 
-    <!-- Logo Section -->
+    <!-- Main Logo Section -->
     <div class="py-32 flex justify-center items-center">
       <a href="https://audio.jukehost.co.uk/GszEuHP7S2h8bmLQQCHV3LF17Zb4Bq5b" onclick="playSound(); return false;" class="w-64 h-64 border-2 border-transparent flex items-center justify-center hover:border-transparent transition-colors cursor-pointer overflow-hidden" style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover; background-position: center;">
         <span class="text-gray-400"></span>
@@ -179,6 +179,9 @@
         <!-- Second Row - 3 products centered -->
        <div class="flex-1 py-24 px-8 max-w-7xl mx-auto w-full">
       <div class="flex flex-col gap-6">
+        
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
+          <div class="flex flex-col gap-2">
             <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_5_IMAGE_URL'); background-size: cover; background-position: center;">
               <span class="text-gray-400">PRODUCT 5</span>
             </a>
