--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_4_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 4</span>
+            <a href="https://buddy.bigcartel.com/product/rawdawg-university" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413730528/rawdawg+uni+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 4
+              raw dawg alumni
             </a>
           </div>
         </div>
@@ -182,38 +182,38 @@
         
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_5_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 5</span>
+            <a href="https://buddy.bigcartel.com/product/san-jose" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846213/san+jose+t.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 5
+              san jose
             </a>
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url('YOUR_PRODUCT_6_IMAGE_URL'); background-size: cover; background-position: center;">
-              <span class="text-gray-400">PRODUCT 6</span>
+            <a href="https://buddy.bigcartel.com/product/4-wonders" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846255/4+wonders.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
-              Product Name 6
+              4 wonders
             </a>
           </div>
 
           <div class="flex flex-col gap-2">
-              <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
-                <span class="text-gray-400">PRODUCT 7</span>
+              <a href="https://buddy.bigcartel.com/product/puppy" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846507/puppy+bud.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+                <span class="text-gray-400"></span>
               </a>
               <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
-                Product Name 7
+                puppy
               </a>
             </div>
           
           <div class="flex flex-col gap-2">
-              <a href="#" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url('YOUR_PRODUCT_7_IMAGE_URL'); background-size: cover; background-position: center;">
-                <span class="text-gray-400">PRODUCT 8</span>
+              <a href="https://buddy.bigcartel.com/product/script" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846360/SCRIPT.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+                <span class="text-gray-400"></span>
               </a>
               <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
-                Product Name 8
+                script
               </a>
             </div>
           </div>
