--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- First Row - 4 products -->
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/buddytv2shirts" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/buddytv2shirts" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413321598/buddytv2++export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -149,7 +149,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/puppy-paws" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/puppy-paws" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413322114/puppy+paws+export_.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -158,7 +158,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/script-angel-tee" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/script-angel-tee" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413732484/black+and+white+angel+t_+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -167,7 +167,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/rawdawg-university" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413730528/rawdawg+uni+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/rawdawg-university" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/413730528/rawdawg+uni+export.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -182,7 +182,7 @@
         
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6">
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/san-jose" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846213/san+jose+t.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/san-jose" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846213/san+jose+t.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -191,7 +191,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <a href="https://buddy.bigcartel.com/product/4-wonders" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846255/4+wonders.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+            <a href="https://buddy.bigcartel.com/product/4-wonders" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden" style="background-image: url(https://assets.bigcartel.com/product_images/414846255/4+wonders.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
               <span class="text-gray-400"></span>
             </a>
             <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer">
@@ -200,7 +200,7 @@
           </div>
 
           <div class="flex flex-col gap-2">
-              <a href="https://buddy.bigcartel.com/product/puppy" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846507/puppy+bud.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <a href="https://buddy.bigcartel.com/product/puppy" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846507/puppy+bud.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
                 <span class="text-gray-400"></span>
               </a>
               <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
@@ -209,7 +209,7 @@
             </div>
           
           <div class="flex flex-col gap-2">
-              <a href="https://buddy.bigcartel.com/product/script" class="aspect-square border-2 border-gray-300 flex items-center justify-center hover:border-transparent hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846360/SCRIPT.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
+              <a href="https://buddy.bigcartel.com/product/script" class="aspect-square border-2 border-transparent flex items-center justify-center hover:border-gray-400 hover:scale-105 transition-all cursor-pointer overflow-hidden block" style="background-image: url(https://assets.bigcartel.com/product_images/414846360/SCRIPT.png?auto=format&fit=max&w=700); background-size: cover; background-position: center;">
                 <span class="text-gray-400"></span>
               </a>
               <a href="#" class="text-center text-gray-600 hover:text-gray-800 transition-colors cursor-pointer block">
