--- a/index.html
+++ b/index.html
@@ -228,37 +228,34 @@
       </div>
     </div>
 
-    <!-- Spacer before footer -->
-    <div class="py-32"></div>
+    <!-- ⭐ BOTTOM-RIGHT TABS (FLUSH TO SCREEN EDGE) -->
+<div class="relative w-full mt-80">
+<div class="relative w-full">
+  <div class="absolute right-0 bottom-0 flex flex-col gap-4 items-end z-50">
 
-    <!-- Footer with Right-side Tabs -->
-     <div class="pb-16 relative">
-      <div class="absolute right-0 bottom-8 flex flex-col gap-4 items-end">
-        
-        <!-- Tab 3 -->
-        <a href="#" class="tab-container tab-3 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
-          <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/200x80/cccccc/666666?text=TAB+3');"></div>
-          <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/200x80/aaaaaa/444444?text=TAB+3+HOVER');"></div>
-          <span class="text-gray-600 relative z-10">TAB 3</span>
-        </a>
+    <!-- Tab 3 -->
+    <a href="#" class="tab-container tab-3 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+      <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/200x80/cccccc/666666?text=TAB+3');"></div>
+      <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/200x80/aaaaaa/444444?text=TAB+3+HOVER');"></div>
+      <span class="text-gray-600 relative z-10">TAB 3</span>
+    </a>
 
-        <!-- Tab 2 -->
-        <a href="#" class="tab-container tab-2 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
-          <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/280x80/cccccc/666666?text=TAB+2');"></div>
-          <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/280x80/aaaaaa/444444?text=TAB+2+HOVER');"></div>
-          <span class="text-gray-600 relative z-10">TAB 2</span>
-        </a>
+    <!-- Tab 2 -->
+    <a href="#" class="tab-container tab-2 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+      <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/280x80/cccccc/666666?text=TAB+2');"></div>
+      <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/280x80/aaaaaa/444444?text=TAB+2+HOVER');"></div>
+      <span class="text-gray-600 relative z-10">TAB 2</span>
+    </a>
 
-        <!-- Tab 1 -->
-        <a href="#" class="tab-container tab-1 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
-          <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/360x80/cccccc/666666?text=TAB+1');"></div>
-          <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/360x80/aaaaaa/444444?text=TAB+1+HOVER');"></div>
-          <span class="text-gray-600 relative z-10">TAB 1</span>
-        </a>
-
-      </div>
-    </div>
-
+    <!-- Tab 1 -->
+    <a href="#" class="tab-container tab-1 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+      <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/360x80/cccccc/666666?text=TAB+1');"></div>
+      <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/360x80/aaaaaa/444444?text=TAB+1+HOVER');"></div>
+      <span class="text-gray-600 relative z-10">TAB 1</span>
+    </a>
+<div class="relative w-full mt-1">
   </div>
+</div>
+
 </body>
 </html>
