--- a/index.html
+++ b/index.html
@@ -52,26 +52,57 @@
 
 <div class="min-h-screen bg-white flex flex-col" style="background-image: url('YOUR_BACKGROUND_IMAGE_URL'); background-size: cover; background-position: center;">
 
-  <!-- Scrolling Header -->
-  <div class="bg-black text-white py-1 overflow-hidden">
-    <div class="flex whitespace-nowrap animate-scroll">
-      <div class="flex gap-2">
-        <!-- repeated text -->
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-      </div>
-      <div class="flex gap-2">
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
-        <a href="#" class="inline-block hover:opacity-70 transition-opacity">BUDDY.COM</a>
+  <!-- Scrolling Header Bar -->
+    <div class="bg-black text-white py-1 overflow-hidden">
+      <div class="flex whitespace-nowrap animate-scroll">
+        <div class="flex gap-2">
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+        </div>
+        <!-- Duplicate for seamless loop -->
+        <div class="flex gap-2">
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+          <a href="#" class="inline-block hover:opacity-70 transition-opacity cursor-pointer">BUDDY.COM</a>
+        </div>
       </div>
     </div>
-  </div>
+
 
   <!-- Logo -->
   <div class="py-32 flex justify-center items-center">
