--- a/index.html
+++ b/index.html
@@ -178,21 +178,21 @@
     <a href="#" class="tab-container tab-3 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/200x80/cccccc/666666?text=TAB+3');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/200x80/aaaaaa/444444?text=TAB+3+HOVER');"></div>
-      <span class="text-gray-600 relative z-10">TAB 3</span>
+      <span class="text-gray-600 relative z-10">media</span>
     </a>
 
     <!-- Tab 2 -->
     <a href="#" class="tab-container tab-2 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/280x80/cccccc/666666?text=TAB+2');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/280x80/aaaaaa/444444?text=TAB+2+HOVER');"></div>
-      <span class="text-gray-600 relative z-10">TAB 2</span>
+      <span class="text-gray-600 relative z-10">social</span>
     </a>
 
     <!-- Tab 1 -->
     <a href="#" class="tab-container tab-1 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/360x80/cccccc/666666?text=TAB+1');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/360x80/aaaaaa/444444?text=TAB+1+HOVER');"></div>
-      <span class="text-gray-600 relative z-10">TAB 1</span>
+      <span class="text-gray-600 relative z-10">something</span>
     </a>
 <div class="relative w-full mt-1">
   </div>
