--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   }
 </script>
 
-<div class="min-h-screen bg-white flex flex-col" style="background-image: url('YOUR_BACKGROUND_IMAGE_URL'); background-size: cover; background-position: center;">
+<div class="min-h-screen bg-white flex flex-col" style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover; background-position: center;">
 
   <!-- Scrolling Header Bar -->
     <div class="bg-black text-white py-1 overflow-hidden">
